name:                ntha
version:             0.1.3
synopsis:            A tiny statically typed functional programming language.
description:         Check out <https://github.com/zjhmale/Ntha#readme the readme> for documentation.
homepage:            https://github.com/zjhmale/ntha
license:             BSD3
license-file:        LICENSE
author:              zjhmale
maintainer:          zjhmale@gmail.com
copyright:           2016 zjhmale
category:            Compiler
                   , Language
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10
extra-source-files:
    README.md
data-files:
    lib/std.ntha
    examples/misc.ntha

library
  hs-source-dirs:      src
  exposed-modules:     Ntha.Core.Ast
                     , Ntha.Core.Prologue
                     , Ntha.Runtime.Eval
                     , Ntha.Runtime.Value
                     , Ntha.Type.Type
                     , Ntha.Type.TypeScope
                     , Ntha.Type.Refined
                     , Ntha.Type.Infer
                     , Ntha.State
                     , Ntha.Parser.Lexer
                     , Ntha.Parser.Parser
                     , Ntha.Z3.Assertion
                     , Ntha.Z3.Class
                     , Ntha.Z3.Context
                     , Ntha.Z3.Encoding
                     , Ntha.Z3.Logic
                     , Ntha
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , pretty
                     , monad-loops
                     , array
                     , z3 >= 4.1.0
                     , mtl >= 2.2 && < 2.3
                   --, z3-encoding
  build-tools:         happy
                     , alex
  default-extensions:  TupleSections
                     , StandaloneDeriving
                     , FlexibleInstances
                     , FlexibleContexts
                     , ScopedTypeVariables
                     , MultiParamTypeClasses
                     , RankNTypes
                     , GADTs
  default-language:    Haskell2010
  ghc-options:         -Wall

executable ntha
  hs-source-dirs:      app
  main-is:             Main.hs
  other-modules:       Paths_ntha
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  build-depends:       base
                     , ntha
                     , containers
                     , lens
                     , haskeline
                     , mtl
  default-language:    Haskell2010

test-suite ntha-test
  type:                exitcode-stdio-1.0
  other-modules:       EvalSpec
                     , InferSpec
                     , ParserSpec
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , ntha
                     , hspec >= 1.3
                     , containers
                     , pretty
  default-extensions:  UnicodeSyntax
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/zjhmale/ntha
